--- a/style.css
+++ b/style.css
@@ -315,6 +315,8 @@ footer a {
 /* Page Heros */
 .page-hero {
     height: 45vh;
+    min-height: 350px;
+    padding-top: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
